SONAR-20198 Added rules data to elasticsearch indexes